--- a/index.html
+++ b/index.html
@@ -739,7 +739,6 @@
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script>
         // Dark mode detection
         if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
@@ -753,8 +752,7 @@
             }
         });
 
-        const EXCEL_URL = 'https://www.gov.br/anp/pt-br/assuntos/precos-e-defesa-da-concorrencia/precos/precos-revenda-e-de-distribuicao-combustiveis/shlp/semanal/semanal-municipio-2024-2025.xlsx';
-        const HEADER_ROW = 11; // Row index where headers are located (0-based)
+        const API_URL = '/api/fuel-prices';
         const UPDATE_PASSWORD = 'transportescmg';
 
         let isLoading = false;
@@ -839,13 +837,6 @@
             return date.toLocaleDateString('pt-BR', options);
         }
 
-        function excelDateToJS(serial) {
-            if (serial instanceof Date) return serial;
-            if (typeof serial === 'string') return new Date(serial);
-            const utcDays = Math.floor(serial - 25569);
-            return new Date(utcDays * 86400 * 1000);
-        }
-
         function setLoading(loading) {
             isLoading = loading;
             const btn = document.getElementById('updateBtn');
@@ -893,81 +884,6 @@
             hideError();
         }
 
-        function processExcelData(data) {
-            const workbook = XLSX.read(data, { type: 'array', cellDates: true });
-            const sheetName = workbook.SheetNames[0];
-            const worksheet = workbook.Sheets[sheetName];
-
-            // Convert to JSON, starting from header row
-            const jsonData = XLSX.utils.sheet_to_json(worksheet, {
-                range: HEADER_ROW,
-                defval: null
-            });
-
-            // Filter for GUARULHOS
-            const guarulhosData = jsonData.filter(row => {
-                const municipio = row['MUNICÍPIO'] || row['MUNICIPIO'];
-                return municipio && municipio.toString().toUpperCase() === 'GUARULHOS';
-            });
-
-            if (guarulhosData.length === 0) {
-                throw new Error('Nenhum dado encontrado para Guarulhos');
-            }
-
-            // Find the most recent DATA FINAL
-            let maxDate = null;
-            guarulhosData.forEach(row => {
-                const dataFinal = excelDateToJS(row['DATA FINAL']);
-                if (!maxDate || dataFinal > maxDate) {
-                    maxDate = dataFinal;
-                }
-            });
-
-            // Filter for the most recent date
-            const latestData = guarulhosData.filter(row => {
-                const dataFinal = excelDateToJS(row['DATA FINAL']);
-                return dataFinal.getTime() === maxDate.getTime();
-            });
-
-            // Get DATA INICIAL
-            let minDate = null;
-            latestData.forEach(row => {
-                const dataInicial = excelDateToJS(row['DATA INICIAL']);
-                if (!minDate || dataInicial < minDate) {
-                    minDate = dataInicial;
-                }
-            });
-
-            // Extract prices for each fuel type
-            const prices = {
-                gasolinaComum: null,
-                etanol: null,
-                diesel: null,
-                gnv: null
-            };
-
-            latestData.forEach(row => {
-                const produto = (row['PRODUTO'] || '').toString().toUpperCase();
-                const preco = row['PREÇO MÉDIO REVENDA'];
-
-                if (produto.includes('GASOLINA COMUM')) {
-                    prices.gasolinaComum = preco !== null && !isNaN(preco) ? parseFloat(preco) : null;
-                } else if (produto.includes('ETANOL')) {
-                    prices.etanol = preco !== null && !isNaN(preco) ? parseFloat(preco) : null;
-                } else if (produto.includes('DIESEL') && !produto.includes('S10')) {
-                    prices.diesel = preco !== null && !isNaN(preco) ? parseFloat(preco) : null;
-                } else if (produto.includes('GNV')) {
-                    prices.gnv = preco !== null && !isNaN(preco) ? parseFloat(preco) : null;
-                }
-            });
-
-            return {
-                prices,
-                periodStart: minDate,
-                periodEnd: maxDate
-            };
-        }
-
         async function fetchFuelPrices() {
             if (isLoading) return;
 
@@ -975,16 +891,16 @@
             hideError();
 
             try {
-                const response = await fetch(EXCEL_URL);
-                if (!response.ok) {
-                    throw new Error(`Erro ao baixar arquivo: ${response.status}`);
+                const response = await fetch(API_URL);
+                const result = await response.json();
+
+                if (!response.ok || !result.success) {
+                    throw new Error(result.error || `Erro na API: ${response.status}`);
                 }
 
-                const arrayBuffer = await response.arrayBuffer();
-                const data = new Uint8Array(arrayBuffer);
-
-                const result = processExcelData(data);
-                updateUI(result.prices, result.periodStart, result.periodEnd);
+                const periodStart = new Date(result.periodStart);
+                const periodEnd = new Date(result.periodEnd);
+                updateUI(result.data, periodStart, periodEnd);
 
             } catch (error) {
                 console.error('Error fetching fuel prices:', error);
